[package]
name = "chirpstack_gwb_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chirpstack_api = "4.4.0"
config = "0.13.2"
http = "0.2.8"
prost = "0.11.0"
rand = "0.8.5"
reqwest = {version = "0.11.10", features = ["json"]}
rumqttc = "0.20.0"
serde = "1.0"
serde_derive = "1.0.8"
serde_json = "1.0.81"
thiserror = "1.0.31"
tonic = "0.9.2"
tokio = {version = "1.19", features = ["full"]}
tracing = "0.1"
uuid = {version = "1.1", features = ["v4"]}
hex = "0.4.3"

[dev-dependencies]
serde_path_to_error = "0.1.7"
