[package]
name = "spatz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = {version = "0.10.0", features = ["axum", "axum-ws", "redoc"]}
async-trait = "0.1"
axum = {version= "0.6.0", features = ["ws"]}
bp7 = "0.10.5"
chirpstack_gwb_integration = { path = "../chirpstack_gwb_integration" }
chirpstack_api = "4.4.0"
chirpstack_api_wrapper = {path ="../chirpstack_api_wrapper"}
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.0.4", features = ["derive"] }
config = {version = "0.13", default-features = false, features = ["toml"]}
crc32fast = "1.3.2"
futures-util = "0.3"
headers = "0.3"
hex = {version = "0.4.3", features = ["serde"]}
nom = "7.1.1"
rand = "0.8.5"
schemars = {version = "0.8.11", features = ["chrono"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0"
sha3 = "0.10"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls" , "sqlite", "macros"]}
thiserror = "1.0.37"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2"